--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -181,6 +181,7 @@
         }
         :host .grid .container .content, :host .grid .container.expanded .content {
             margin: 0 10px 30px;
+            width: 260px;
             padding: 0;
             border: 5px solid transparent;
             height: calc(100% - 40px);
