--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
@@ -206,6 +206,7 @@
             attached : function() {
                 this.translate(AlexandriaTemporalTimeCatalogDictionary);
                 this.listenToDisplay();
+                this.listenOpenEvents();
             },
 
             _refreshCatalog : function(catalog) {
