--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
@@ -210,6 +210,7 @@
             attached : function() {
                 this.translate(AlexandriaCatalogDictionary);
                 this.listenToDisplay();
+                this.listenOpenEvents();
             },
 
             _refreshCatalog : function(catalog) {
