--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-range-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-range-catalog.html
@@ -210,6 +210,7 @@
             attached : function() {
                 this.translate(AlexandriaTemporalRangeCatalogDictionary);
                 this.listenToDisplay();
+                this.listenOpenEvents();
             },
 
             _loadTimezoneOffset : function() {
