alexandria-activity: fix load stamp map pictures. Added routes

--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -425,9 +425,7 @@
                 var listElement = this.querySelector("cotton-list");
                 if (listElement != null) listElement.pageLoaded();
 
-                window.setTimeout(() => {
-                    this.$.items.fire("iron-resize");
-                }, 50);
+//                window.setTimeout(() => this.$.items.fire("iron-resize"), 50);
             },
 
             _generateGroups : function(itemList) {
