--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
@@ -7,7 +7,8 @@
 
         properties : {
             _breadcrumbs : { type: Object, value: function () { return []; } },
-            _notifyMessage : String
+            _notifyMessage : String,
+            _lastView : String
         },
 
         listenOpenEvents : function() {
@@ -17,8 +18,10 @@
         },
 
         _openView : function(e) {
-            this.openView(e.detail);
+            var view = e.detail;
+            this.openView(view);
             if (e.stopPropagation) e.stopPropagation();
+            this._lastView = view;
         },
 
         _openItem : function(e) {
@@ -52,6 +55,7 @@
         _hidePanel : function() {
             $(this.$.main).removeClass("hidden");
             $(this.$.panel).addClass("hidden");
+            if (this._lastView != null) this.openView(this._lastView);
         },
 
         _notifyUser : function(message) {
@@ -64,7 +68,9 @@
         },
 
         _navigate : function(e) {
-            this.navigate(e.detail.item.name);
+            var name = atob(e.detail.item.name);
+            if (name == "main") this.home();
+            else this.openItem(name);
         }
 
     };
