--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map-item.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map-item.html
@@ -65,6 +65,11 @@
                 this.loaded = true;
             },
 
+            refreshPicture : function(pictureData) {
+                if (this._moldContainer == null) return;
+                this._moldContainer.refreshPicture(pictureData);
+            },
+
             _prepareInfoWindow : function() {
                 this._renderMold();
                 this._createInfoWindow();
@@ -143,11 +148,11 @@
                 if (locationStamp == null || locationStamp.values.length == 0 || locationStamp.values[0] == "") return;
 
                 var wkt = new Wkt.Wkt();
+                var icon = this._propertyValue(locationStamp.propertyList, "icon");
                 try {
                     wkt.read(locationStamp.values[0]);
                     this.locationItem = this._fixWkt(wkt).toObject(this._configuration(locationStamp));
-                    if (locationStamp.propertyList.icon)
-                        this._addIcon(locationStamp.propertyList.icon);
+                    if (icon != null) this._addIcon(icon);
                     this._addListeners(this.locationItem);
 //                    this._updateCentroid(this.locationItem);
 //                    if (this._isMarker(this.locationItem)) return;
@@ -180,7 +185,7 @@
 
             _configuration : function(stamp) {
                 var config = this.map.defaults != null ? this.map.defaults : {};
-                var color = stamp.propertyList.color;
+                var color = this._propertyValue(stamp.propertyList, "color");
                 config.editable = stamp.editable != null ? stamp.editable : false;
                 if (color != null) {
                     config.strokeColor = color.text;
@@ -227,6 +232,12 @@
                     this.notifyPath("centroid.latitude", obj.position.lat());
                     this.notifyPath("centroid.longitude", obj.position.lng());
                 }
+            },
+
+            _propertyValue : function(propertyList, name) {
+                for (var i=0; i<propertyList.length; i++)
+                    if (propertyList[i].name == name) return propertyList[i].value;
+                return null;
             }
 
         });
