--- a/alexandria/activity-elements-activity/src/widgets/alexandria-menu-layout.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-menu-layout.html
@@ -22,7 +22,7 @@
     <template>
         <cotton-layout id="layout" title="[[_title]]" subtitle="[[_subtitle]]" logo="[[_logo]]"
                        tabs="[[_layoutTabList]]" selected-tab="0"
-                       on-logout="_logout" on-edit-profile="_editProfile" on-home="showHome">
+                       on-logout="_logout" on-edit-profile="_editProfile" on-home="home">
 
             <div id="user-content">
                 <content select="#header-content"></content>
