--- a/alexandria/activity-elements-activity/src/widgets/alexandria-tab-layout.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-tab-layout.html
@@ -21,7 +21,7 @@
         <cotton-layout id="layout" title="[[_title]]" subtitle="[[_subtitle]]" logo="[[_logo]]"
                        tabs="[[_itemTabList]]" selected-tab="{{_openedItemIndex}}"
                        on-select-tab="_openItemByEvent" on-logout="_logout" on-edit-profile="_editProfile"
-                       on-home="showHome">
+                       on-home="home">
 
             <div id="user-content">
                 <content select="#header-content"></content>
