--- a/alexandria/ui-elements/src/widgets/alexandria-container-view-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-container-view-catalog.html
@@ -4,10 +4,10 @@
 <link rel="import" href="../../lib/cotton-zombie/cotton-zombie.html">
 <link rel="import" href="../../lib/cotton-translator/cotton-translator-behavior.html">
 
-<script src="alexandriapaneldisplayview/requester.js"></script>
-<script src="alexandriapaneldisplayview/notifier-listener.js"></script>
+<script src="alexandriacontainerviewcatalog/requester.js"></script>
+<script src="alexandriacontainerviewcatalog/notifier-listener.js"></script>
 
-<dom-module id="alexandria-panel-display-view">
+<dom-module id="alexandria-container-view-catalog">
 
     <template>
         <div id="container"></div>
@@ -15,13 +15,21 @@
 
     <style>
         :host #container {
-            height: 100%;
+            position: relative;
+            padding-top: 8px;
+            height: calc(100% - 8px);
+            overflow: hidden;
+        }
+        :host ::content alexandria-catalog ::content .main,
+        :host ::content alexandria-temporal-range-catalog ::content .main,
+        :host ::content alexandria-temporal-time-catalog ::content .main {
+            border: 0 !important;
         }
     </style>
 
     <script>
 
-        const AlexandriaPanelDisplayViewDictionary = {
+        const AlexandriaContainerViewCatalogDictionary = {
             es: {
             },
             en: {
@@ -29,19 +37,19 @@
         };
 
         Polymer({
-            is: 'alexandria-panel-display-view',
+            is: 'alexandria-container-view-catalog',
 
             behaviors: [ CottonBehaviors.CarrierBehavior,
                 CottonBehaviors.PushBehavior,
                 CottonBehaviors.TranslatorBehavior,
-                AlexandriaPanelDisplayViewBehaviors.Requester,
-                AlexandriaPanelDisplayViewBehaviors.NotifierListener ],
+                AlexandriaContainerViewCatalogBehaviors.Requester,
+                AlexandriaContainerViewCatalogBehaviors.NotifierListener ],
 
             properties : {
             },
 
             attached : function() {
-                this.translate(AlexandriaPanelDisplayViewDictionary);
+                this.translate(AlexandriaContainerViewCatalogDictionary);
                 this.listenToDisplay();
             },
 
@@ -55,4 +63,5 @@
 
         });
     </script>
+
 </dom-module>
